<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">手机导游平台</string>
    <string name="province_name">北京市手机导游</string>
    <string name="home">首页</string>
    <string name="setting">设置中心</string>
    <string name="personal">个人中心</string>
    <string name="prompt_to_exit">再按一次退出应用</string>
    <string name="shaanxi_province">手机导游平台</string>
    <string name="account">用户名</string>
    <string name="password">密&#160;码</string>
    <string name="login">登&#160;&#160;&#160;录</string>
    <string name="loginno">取&#160;&#160;&#160;消</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="register">注&#160;册</string>
    <string name="loading_prompt">载入中…</string>
    <string name="phone_prompt">绑定手机</string>
    <string name="phone_name">用户名</string>
    <string name="get_code">获取验证码</string>
    <string name="input_code">输入验证码</string>
    <string name="input_new_pass">输入密码</string>
    <string name="input_repass">确认密码</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="wait_code">请等待</string>
    <string name="old_epass">原密码</string>
    <string name="new_epass">新密码</string>
    <string name="ok_edit_pass">确认修改密码</string>
    <string name="binding_phone_number">绑定手机号码</string>
    <string name="input_new_phone">请输入新绑定手机</string>
    <string name="input_current_phone">请输入绑定手机</string>
    <string name="account_null_prompt">请输入用户名</string>
    <string name="password_null_prompt">请输入密码</string>
    <string name="password_length_prompt">密码不能小于6位</string>
    <string name="phone_null_prompt">请输入手机号</string>
    <string name="phone_error_prompt">手机号有误</string>
    <string name="code_null_prompt">请输入验证码</string>
    <string name="newpass_null_prompt">请输入新密码</string>
    <string name="repass_null_prompt">请确认密码</string>
    <string name="repass_error_prompt">两次密码不一致</string>
    <string name="input_old_pass">请输入原密码</string>
    <string name="get_code_error_prompt">验证码获取失败，请重试</string>
    <string name="system_error_prompt">系统异常，请重新操作</string>
    <string name="network_error_try_again">网络异常，请检查网络后重试</string>
    <string name="network_no_error_prompt">未检测到网络连接</string>
	<string name="personal_top_name">游侠尹武</string>
	<string name="personal_top_job">游客</string>
	<string name="personal_bottom_but">退出登录</string>
	<string name="indent_top_text_01">全部订单</string>
	<string name="indent_top_text_02">全部</string>
	<string name="indent_top_text_03">未付款</string>
	<string name="indent_top_text_04">未消费</string>
	<string name="indent_top_text_05">待评价</string>
	<string name="indent_top_text_06">退款</string>
	<string name="task_top_text_01">我的任务</string>
	<string name="task_top_text_02">全部任务</string>
	<string name="task_top_text_03">已完成</string>
	<string name="task_top_text_04">未完成</string>
	<string name="collect_top_text_01">我的收藏</string>
	<string name="collect_top_text_02">活动</string>
	<string name="collect_top_text_03">景点</string>
	<string name="scene_top_text_01">主要景观</string>
	<string name="scene_top_text_02">分类</string>
	<string name="scene_top_text_03">排序</string>
	<string name="stategy_top_text_01">分类</string>
	<string name="stategy_top_text_02">排序</string>
	<string name="exercise_top_text_01">近期活动</string>
	<string name="exercise_top_text_02">分类</string>
	<string name="exercise_top_text_03">排序</string>
	<string name="merchant_top_text_01">团购商铺</string>
	<string name="assess_top_text_01">我的地址</string>
	<string name="listen_top_text_01">我的收听</string>
	<string name="newassess_top_text_01">评价</string>
	<string name="newassess_top_text_02">评价详情</string>
	<string name="newassess_top_text_03">匿名评价</string>
	<string name="newassess_top_text_04">提交</string>
	<string name="newassess_top_text_05">评论内容</string>
	<string name="buy_top_text_01">景区团购</string>
	<string name="buy_top_text_02">类型</string>
	<string name="buy_top_text_03">区域</string>
	<string name="buy_top_text_04">排序</string>
	<string name="lineitem_top_text_01">景区团购</string>
	<string name="lineitem_top_text_02">立即购买</string>
	<string name="lineitem_top_text_03">支付过期退款</string>
	<string name="lineitem_top_text_04">支付随时退款</string>
	<string name="lineitem_top_text_05">评价:</string>
	<string name="lineitem_top_text_06">订单详情</string>
	<string name="lineitem_top_text_07">查看图文详情</string>
	<string name="lineitem_top_text_08">订单信息</string>
	<string name="lineitem_top_text_09">订单号:</string>
	<string name="lineitem_top_text_10">购买手机:</string>
	<string name="lineitem_top_text_11">付款时间:</string>
	<string name="lineitem_top_text_12">数量:</string>
	<string name="lineitem_top_text_13">总价:</string>
	<string name="lineitem_top_text_14">物流信息</string>
	<string name="buy_item_01">$130元</string>
	<string name="buy_item_02">门票</string>
	<string name="about_text_01">关于</string>
	<string name="about_text_02">手机导游平台</string>
	<string name="about_text_03">手机导游平台是由西安甲骨企业文化传播有限公司与《西北旅游》杂志联合开发研制,应用于旅游过程中的语音导游,导航,旅游团购等旅行辅助功能。</string>
	<string name="about_text_04">西安甲骨企业文化传播有限公司</string>
	<string name="about_text_05">地址:西安市高新区科技路37号海星城市广场2幢705室</string>
	<string name="about_text_06">电话:029-88348051	029-88331389</string>
	<string name="matter_text_01">系统问题</string>
	<string name="matter_text_02">对我有什么不满尽情的吐槽我吧</string>
	<string name="matter_text_03">提交反馈问题</string>
	<string name="homefragment_text_01">您所在的位置是:光夏路</string>
	<string name="audio_but_01">实时导游</string>
	<string name="audio_but_02">预游览</string>
	<string name="audio_but_03">虚拟游览</string>
	<string name="hidden">隐藏</string>
	<string name="feature_text_01">特色城市</string>
	<string name="feature_text_02">民俗文化</string>
	<string name="feature_text_03">历史沿革</string>
	<string name="feature_text_04">著名人物</string>
	<string name="feature_text_05">本地特产</string>
	<string name="scenedetial_text_01">景区详情</string>
	<string name="scenedetial_text_02">景区简介</string>
	<string name="scenedetial_text_03">评价</string>
	<string name="travelstrategy_text_01">攻略详情</string>
	<string name="help_text_01">使用帮助</string>
	<string name="help_text_02">语音导游</string>
	<string name="help_text_03">主要景观</string>
	<string name="help_text_04">特色西安</string>
	<string name="help_text_05">近期活动</string>
	<string name="help_text_06">旅游攻略</string>
	<string name="help_text_07">景区团购</string>
	<string name="zzz_01">手机导游平台升级中</string>
	<string name="travelstrategy_top">游客</string>
	<string name="new_introduction_text_01">请输入标题</string>
	<string name="new_introduction_text_02">请输入时间:如第一天</string>
	<string name="new_introduction_text_03">请输入内容</string>
	<string name="refund_text">请输入退款原因</string>
	
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
	 <string name="app_tip">提示</string>
	 <string name="getting_prepayid">正在转到微信支付...</string>
	 <string name="getting_access_token">正在获取access token...</string>
	 <string name="get_access_token_succ">获取access token成功</string>
	 <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
	 <string name="get_prepayid_succ">获取prepayid成功</string>
	 <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
	<string name="pay_result_success">微信支付结果：支付成功</string>
	 <string name="pay_result_cancle">微信支付结果：取消支付</string>
	 <string name="pay_result_fail">微信支付结果：支付失败</string>
	 <string name="seting_orderid">正在生成订单号...</string>
	
</resources>