<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res/com.jiagu.mobile.tourguide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_denglu"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingTop="35dp" >

            <com.jiagu.mobile.tourguide.widget.CircleImageView
                android:id="@+id/forgetpass_user_logo_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_default_head"
                app1:border_color="@color/haed_border"
                app1:border_width="4dp" />

            <EditText
                android:id="@+id/forgetpass_user_name_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_yonghu"
                android:hint="@string/phone_name"
                 />
            <EditText
                android:id="@+id/forgetpass_user_phone_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_bangding"
                android:hint="@string/phone_prompt"
                android:inputType="phone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="8dp" >

                <Button
                    android:id="@+id/forgetpass_btn"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_code_selector"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:text="@string/get_code"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/forgetpass_user_code_et"
                    style="@style/EdtiText"
                    android:layout_marginLeft="0dp"
                    android:layout_toLeftOf="@+id/forgetpass_btn"
                    android:drawableLeft="@drawable/icon_shuru"
                    android:hint="@string/input_code" />

            </RelativeLayout>

            <EditText
                android:id="@+id/forgetpass_user_pass_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_shuru"
                android:hint="@string/input_new_pass"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/forgetpass_user_repass_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_shuru"
                android:hint="@string/input_repass"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/forgetpass_ok_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_login_selector"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/forgetpass_cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/view_loading" />

</LinearLayout>