<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res/com.jiagu.mobile.tourguide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_denglu" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="40dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/shaanxi_province"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <com.jiagu.mobile.tourguide.widget.CircleImageView
                android:id="@+id/login_user_logo_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_default_head"
                app1:border_color="@color/haed_border"
                app1:border_width="6dp" />

            <EditText
                android:id="@+id/login_user_name_et"
                style="@style/EdtiText"
                android:layout_marginTop="28dp"
                android:drawableLeft="@drawable/icon_yonghuming"
                android:hint="@string/account" />

            <EditText
                android:id="@+id/login_user_pass_et"
                style="@style/EdtiText"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/icon_mima"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login_selector"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <Button
                android:id="@+id/login_btnno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login_selector"
                android:text="@string/loginno"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/register_tv_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:text="|"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/forget_tv_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/forget_pass"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/view_loading" />

</FrameLayout>