<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijing1"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp" >

        <ImageButton
            android:id="@+id/activity_task_image_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="#0000"
            android:src="@drawable/img_return_selector"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/task_top_text_01"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginRight="20dp"
            android:textSize="24sp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/task_all_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/but_indent_selector"
            android:text="@string/task_top_text_02"
            android:button="@null"
            android:gravity="center"
            android:checked="true"
            android:textColor="#fff" />
        <RadioButton
            android:id="@+id/task_no1_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/but_indent_selector_2"
            android:text="@string/task_top_text_03"
            android:button="@null"
            android:gravity="center"
            android:textColor="#fff" />
        <RadioButton
            android:id="@+id/task_no2_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/but_indent_selector_3"
            android:text="@string/task_top_text_04"
            android:button="@null"
            android:gravity="center"
            android:textColor="#fff" />
       
        </RadioGroup>
        <ListView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/list_indent_activity"
            ></ListView>

</LinearLayout>
