<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/beijing1"
        android:orientation="vertical" >
		<View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/view_gradient_top_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/activity_feature_image_return"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="#0000"
                android:padding="10dp"
                android:src="@drawable/img_return_selector" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/feature_text_01"
                android:textColor="#fff"
                android:textSize="24sp" />
        </LinearLayout>
        <RadioGroup
            android:id="@+id/but_feature_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/but_feature_selector_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/but_indent_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/feature_text_02"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/but_feature_selector_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/but_indent_selector_2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/feature_text_03"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/but_feature_selector_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/but_indent_selector_2"
                android:button="@null"
                android:gravity="center"
                android:text="@string/feature_text_04"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/but_feature_selector_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/but_indent_selector_3"
                android:button="@null"
                android:gravity="center"
                android:text="@string/feature_text_05"
                android:textColor="#fff" />
        </RadioGroup>
		
        <com.handmark.pulltorefresh.library.PullToRefreshGridView
            android:id="@+id/activity_feature_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numColumns="2" />
    </LinearLayout>

    <include layout="@layout/view_loading" />

</FrameLayout>